use existing createNE function to ensure NodeGroup is setup